@@ -12,7 +12,8 @@ Revision history for CPAN-Mini-Tested
         - Removed DSLIP info.
         - updated and extended test suite.
         - updated META.yml, added META.json.
-        - fixed link to CPAN Testers.
+        - migrated to newer CPAN Testers link.
+        - migrated to newer CPAN Testers cpanstats.db.
 
 0.22    2005-04-04
         - fixed misuse of Pod::Coverage tests
